Minor fixes to UI
- Change concluding message
- Disable light mode media query
- Increase z-index of nav to solve overlap issues

--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@
   line-height: 1.5;
   font-weight: 400;
 
-  color-scheme: light dark;
+  color-scheme: dark;
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
 
@@ -22,7 +22,7 @@ body {
   min-height: 100vh;
 }
 
-@media (prefers-color-scheme: light) {
+/* @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
     background-color: #ffffff;
@@ -33,4 +33,4 @@ body {
   button {
     background-color: #f9f9f9;
   }
-}
+} */
